--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
         <java.version>1.8</java.version>
         <spring-boot.version>1.2.0.RC2</spring-boot.version>
         <spring-cloud.version>1.0.0.M3</spring-cloud.version>
-        <bootstrap.version>2.3.2</bootstrap.version>
-        <jquery.version>1.11.0</jquery.version>
-        <angularjs.version>1.2.12</angularjs.version>
-        <angular-ui-router.version>0.2.10-1</angular-ui-router.version>
-        <angular-ui-bootstrap.version>0.8.0</angular-ui-bootstrap.version>
+        <bootstrap.version>3.3.1</bootstrap.version>
+        <jquery.version>2.1.1</jquery.version>
+        <angularjs.version>1.2.27</angularjs.version>
+        <angular-ui-router.version>0.2.13</angular-ui-router.version>
+        <angular-ui-bootstrap.version>0.12.0</angular-ui-bootstrap.version>
         <angularjs-nvd3-directives.version>0.0.7-1</angularjs-nvd3-directives.version>
         <d3js.version>3.4.11</d3js.version>
         <nvd3.version>1.1.15-beta</nvd3.version>
