--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.0.RC2</version>
+        <version>1.2.0.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -18,8 +18,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-boot.version>1.2.0.RC2</spring-boot.version>
-        <spring-cloud.version>1.0.0.M3</spring-cloud.version>
+        <spring-boot.version>1.2.0.RELEASE</spring-boot.version>
+        <spring-cloud.version>1.0.0.RC1</spring-cloud.version>
         <bootstrap.version>3.3.1</bootstrap.version>
         <jquery.version>2.1.1</jquery.version>
         <angularjs.version>1.2.27</angularjs.version>
@@ -65,6 +65,7 @@
                     <artifactId>spring-boot-starter-logging</artifactId>
                 </exclusion>
             </exclusions>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
