--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.1.RELEASE</version>
+        <version>1.2.2.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -18,8 +18,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-boot.version>1.2.1.RELEASE</spring-boot.version>
-        <spring-cloud.version>1.0.0.RC3</spring-cloud.version>
+        <spring-cloud.version>1.0.0.RELEASE</spring-cloud.version>
         <bootstrap.version>3.3.1</bootstrap.version>
         <jquery.version>2.1.1</jquery.version>
         <angularjs.version>1.2.27</angularjs.version>
