--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.1.RELEASE</version>
+        <version>1.3.5.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -44,8 +44,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>1.0.0.RELEASE</spring-cloud.version>
-        <aws-sdk.version>1.10.20</aws-sdk.version>
+        <aspectj.version>1.8.7</aspectj.version>
+        <spring-cloud.version>1.1.0.RELEASE</spring-cloud.version>
+        <aws-sdk.version>1.11.5</aws-sdk.version>
         <bootstrap.version>3.3.1</bootstrap.version>
         <jquery.version>2.1.1</jquery.version>
         <angularjs.version>1.2.27</angularjs.version>
@@ -64,7 +65,7 @@
         <version.plugin.maven-release-plugin>2.5</version.plugin.maven-release-plugin>
         <version.plugin.nexus-staging-maven-plugin>1.6.2</version.plugin.nexus-staging-maven-plugin>
         <version.plugin.maven-gpg-plugin>1.6</version.plugin.maven-gpg-plugin>
-
+        <version.plugin.aspectj-maven-plugin>1.8</version.plugin.aspectj-maven-plugin>
         <!-- Source encoding -->
         <source.encoding>UTF-8</source.encoding>
     </properties>
@@ -91,12 +92,29 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -120,6 +138,12 @@
             <scope>provided</scope>
             <version>${aws-sdk.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-cloudformation</artifactId>
+            <scope>provided</scope>
+            <version>${aws-sdk.version}</version>
+        </dependency>
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
@@ -129,12 +153,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -202,6 +220,34 @@
                                 </resource>
                             </resources>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Compile time weaving plugin -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>aspectj-maven-plugin</artifactId>
+                <version>${version.plugin.aspectj-maven-plugin}</version>
+                <configuration>
+                    <showWeaveInfo>false</showWeaveInfo>
+                    <encoding>UTF8</encoding>
+                    <Xlint>ignore</Xlint>
+                    <complianceLevel>1.8</complianceLevel>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <aspectLibraries>
+                        <aspectLibrary>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>spring-aspects</artifactId>
+                        </aspectLibrary>
+                    </aspectLibraries>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -325,9 +371,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>${version.plugin.maven-source-plugin}</version>
-                <configuration>
-                    <encoding>${source.encoding}</encoding>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
