--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.5.RELEASE</version>
+        <version>1.5.4.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -45,8 +45,8 @@
     <properties>
         <java.version>1.8</java.version>
         <aspectj.version>1.8.7</aspectj.version>
-        <spring-cloud.version>1.1.0.RELEASE</spring-cloud.version>
-        <aws-sdk.version>1.11.5</aws-sdk.version>
+        <spring-cloud.version>1.3.1.RELEASE</spring-cloud.version>
+        <aws-sdk.version>1.11.156</aws-sdk.version>
         <bootstrap.version>3.3.1</bootstrap.version>
         <jquery.version>2.1.1</jquery.version>
         <angularjs.version>1.2.27</angularjs.version>
@@ -151,8 +151,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
